--- a/Frontend/client/src/components/pricing/pricing.css
+++ b/Frontend/client/src/components/pricing/pricing.css
@@ -1,22 +1,34 @@
-.pricing {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin-top: 5%;
-    align-items: center;
-    color: #000000;
+.effect2
+{
+  position: relative;
 }
-
-.box {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid #000;
-    width: 50%;
-    height: 50%;
+.effect2:before, .effect2:after
+{
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width:300px;
+  background: #777;
+  -webkit-box-shadow: 0 15px 10px #777;
+  -moz-box-shadow: 0 15px 10px #777;
+  box-shadow: 0 15px 10px #777;
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  transform: rotate(-3deg);
 }
-
-.box li {
-    list-style-type: none;
-    margin: 0 5px;
-
+.effect2:after
+{
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  transform: rotate(3deg);
+  right: 10px;
+  left: auto;
 }
