fine tuning styles to make them responsive

--- a/Frontend/client/src/components/pages/settings.css
+++ b/Frontend/client/src/components/pages/settings.css
@@ -3,13 +3,14 @@
     flex-direction: row;
     flex-wrap: wrap;
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw;
     max-width: 1800px;
-    min-width: 1025px;
+    min-width: 1025px; */
     margin: 0 auto;
     justify-content: space-around;
-    border: 1px solid white;
-
+    width: 100%;
+    max-width: 1280px;
+    min-width: 1024px;
 
 } 
 
@@ -42,9 +43,15 @@
 
 @media only screen and (max-width: 1024px) {
        .settingsPage {
+           /* flex-direction: column;
+           width: 100%;
+           align-items: center; */
            flex-direction: column;
            width: 100%;
-           align-items: center;
+           min-width: 350px;
+           width: 50%;
+           margin-left: auto;
+           margin-right: auto;
 
        }
 
