--- a/Frontend/client/src/components/sidenav/sidenav.css
+++ b/Frontend/client/src/components/sidenav/sidenav.css
@@ -1,73 +1,115 @@
-.sideNav {
+.navPage {
     display: flex;
     flex-direction: column;
-    justify-content: left;
+    padding: 0 15px;
     width: 20%;
 }
 
-.menu {
-    width: 50%;
-    border: 2px solid black;
-    height: 80%;
-    min-height: 400px;
+.menuLogo {
+    display: flex;
+    justify-content: center;
+    width: 100px;
+    margin: 0;
+    padding: 25px;
 }
 
-.menu_list-item {
-    list-style-type: none;
-    margin: 10px -30px;
+.sideNav {
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+    min-width: 150px;
 }
 
 .menu {
-    background-color: white;
+    display: flex;
+    background-color: #ffffff;
     box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
-    display: flex;
-    padding: 0 40px;
     position: relative;
+    height: 400px;
+    padding: 0 40px 0 20px;
+
 }
 
-
-.menu_list {
-    list-style-type: none;
-    padding: 0;
-    height: 100%;
-    margin: 0;
-    margin-right: 40px;
-}
-
-.menu_list-item:last-child {
-    margin-right: 0;
-}
-
-.menu_link {
-    color: #3a3e47;
-    display: inline-block;
-    height: 100%;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
+.menuList {
     display: flex;
-    align-items: center;
-    padding: 0 3px;
-}
-
-.menu_link:hover {
-    color: #ffaa3b;
-}
-
-.menu_link--active {
-    color: #ffaa3b;
-    border-top: 4px solid #ffaa3b;
-    font-weight: 700;
-}
-
-.menu_logo {
-    text-indent: -9999999px;
-    display: inline-block;
-    height: 100%;
-    width: 92px;
-    background-size: cover 100%;
-    background-repeat: no-repeat;
-    background-position: center;
+    flex-direction: column;
     margin: 0;
+}
+
+.listItem {
+    display: flex;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.routeStyles {
+    display: flex;
+    width: 100%;
+}
+
+.style-link {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #010101;
+}
+
+.style-link:hover {
+    color: red;
+}
+
+.styled-link {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.styled-link:hover {
+    color: red;
+}
+
+/* Responsive Media Queries */
+
+@media only screen and (max-width: 1024px) and (min-width: 400px) {
+    .navPage {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+    .menuLogo {
+        text-align: center;
+        width: 100%;
+    }
+
+    .sideNav {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .menu {
+        display: flex;
+        height: 100px;
+        width: 100%;
+        justify-content: center;
+        margin: 0 auto;
+        padding: 0;
+
+    }
+
+    .menuList {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        height: 100px;
+        padding: 0;
+        font-size: 14px;
+    }
+
+    .listItem {
+        margin: 0 5px;
+        padding: 0;
+    }
 }
