--- a/Frontend/client/src/components/pricing/pricing.css
+++ b/Frontend/client/src/components/pricing/pricing.css
@@ -11,8 +11,9 @@
 .priceArea {
   width: 450px;
   height: 40%;
-  padding: 50px 0 0 0;
+  padding: 10px 0;
   background-color: white;
+  
 }
 
 .boxStyle {
@@ -65,9 +66,11 @@
 
 @media only screen and (max-width: 1024px) and (min-width: 400px) {
   .priceArea {
-    padding: 0;
+    padding: 20px 0;
     /* margin: 25px 0 0 0; */
     height: 30%;
+    width: 100%;
+    margin-top: -400px;
   }
 
   .pricePage {
