--- a/Frontend/client/src/components/pricing/pricing.css
+++ b/Frontend/client/src/components/pricing/pricing.css
@@ -1,9 +1,6 @@
 .pricePage {
   display: flex;
   width: 100vw;
-  height: 100vh;
-  max-width: 2500px;
-  min-width: 1025px;
   justify-content: center;
   margin-top: 3%;
 }
@@ -67,10 +64,7 @@
 @media only screen and (max-width: 1024px) and (min-width: 400px) {
   .priceArea {
     padding: 20px 0;
-    /* margin: 25px 0 0 0; */
-    height: 30%;
     width: 100%;
-    margin-top: -400px;
   }
 
   .pricePage {
@@ -80,5 +74,6 @@
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 6%;
   }
 }
