Changed font size on menu links and sign out button.

--- a/Frontend/client/src/App.css
+++ b/Frontend/client/src/App.css
@@ -61,5 +61,6 @@ table {
 a {
     color: black !important;
     text-decoration: none;
-    margin: 0 auto;
+	margin: 0 auto;
+	font-size: 1.5rem;
 }
