--- a/Frontend/client/src/components/design/countDown.css
+++ b/Frontend/client/src/components/design/countDown.css
@@ -1,5 +1,9 @@
 .Countdown {
     width: 100%;
+    padding: 1%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .Countdown-col {
@@ -9,4 +13,11 @@
 
 .bold {
   margin: 1%;
+}
+
+@media only screen and (max-width: 700px) and (min-width: 300px) {
+  .Countdown-col {
+    font-size: 1.5rem;
+    margin: 1%;
+  }
 }
