--- a/Frontend/client/src/App.css
+++ b/Frontend/client/src/App.css
@@ -59,7 +59,13 @@ table {
 }
 
 a {
-    color: black !important;
+    color: black;
     text-decoration: none;
-    margin: 0 auto;
+	margin: 0 auto;
+	font-size: 1.5rem;
+}
+
+input {
+	border-radius: 8px;
+	padding: 1%;
 }
