--- a/Frontend/client/src/components/design/countDown.css
+++ b/Frontend/client/src/components/design/countDown.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .Countdown-col {
@@ -13,6 +14,7 @@
 
 .bold {
   margin: 1%;
+  color: blue;
 }
 
 @media only screen and (max-width: 700px) and (min-width: 300px) {
@@ -20,4 +22,8 @@
     font-size: 1.5rem;
     margin: 1%;
   }
+}
+
+.blank {
+  display: none;
 }
